tests/NormalTests/paczka1/small_fuzzy/27075871.err
Error in line 1: t5FOXg2xzuu A29 40,7
Error in line 3: 7K0KVdMH S482 29,6
Error in line 2: t5FOXg2xzuu A552 1,3
